web/public/styles.css
@charset "UTF-8";

@font-face {
    font-family: "Atkinson Hyperlegible";
    src: url("fonts/WOFF2/Atkinson-Hyperlegible-Regular-102a.woff2") format("woff2"),
        url("fonts/WOFF/Atkinson-Hyperlegible-Regular-102.woff") format("woff"),
        url("fonts/SVG/Atkinson-Hyperlegible-Regular-102.svg") format("svg");
    font-display: swap;
    font-style: normal;
}

@font-face {
    font-family: "Atkinson Hyperlegible";
    src: url("fonts/WOFF2/Atkinson-Hyperlegible-Italic-102a.woff2") format("woff2"),
        url("fonts/WOFF/Atkinson-Hyperlegible-Italic-102.woff") format("woff"),
        url("fonts/SVG/Atkinson-Hyperlegible-Italic-102.svg") format("svg");
    font-display: swap;
    font-style: italic, oblique;
}

@font-face {
    font-family: "Atkinson Hyperlegible";
    src: url("fonts/WOFF2/Atkinson-Hyperlegible-Bold-102a.woff2") format("woff2"),
        url("fonts/WOFF/Atkinson-Hyperlegible-Bold-102.woff") format("woff"),
        url("fonts/SVG/Atkinson-Hyperlegible-Bold-102.svg") format("svg");
    font-display: swap;
    font-weight: bold;
}

@font-face {
    font-family: "Atkinson Hyperlegible";
    src: url("fonts/WOFF2/Atkinson-Hyperlegible-BoldItalic-102a.woff2") format("woff2"),
        url("fonts/WOFF/Atkinson-Hyperlegible-BoldItalic-102.woff") format("woff"),
        url("fonts/SVG/Atkinson-Hyperlegible-BoldItalic-102.svg") format("svg");
    font-display: swap;
    font-weight: bold;
    font-style: italic, oblique;
}

:root {
    --font: "Atkinson Hyperlegible";

    --fg-color: #1C1D23;
    --bg-color: #B3DFF9;
    --bg-image: url("");

    --panel-bg-color: #D1EBFC;
    --bc-bg-color: #F7F7F7;
    --bc-fg-color: #1C1D23;
    --bc-button-bg-color: #FFF;
    --form-bg-color: #FFF;
    --form-border-color: #E5E5E5;

    --barcode-border-color: black;
}

@media (prefers-color-scheme: dark) {
    :root {
        --fg-color: #FCF9FB;
        --bg-color: black;
        --bg-image: url("");

        --panel-bg-color: #282627;
        --bc-bg-color: #FAF2FC;
        --bc-fg-color: black;
        --bc-button-bg-color: #FFF;
        --form-bg-color: #FAF2FC;
        --form-border-color: #E5E5E5;

        --barcode-border-color: black;
    }
}

html,
body {
    padding: 0;
    margin: 0;
}

body {
    color: var(--fg-color);
    background-color: var(--bg-color);
    background-image: var(--bg-image);
    font: var(--font);
    font-style: normal;
}

button,
select,
textarea,
input[type="text"] {
    padding: 1em;
    background: var(--form-bg-color);
    border: 1px solid;
    border-radius: 5px;
    border-color: var(--form-border-color);
    font-style: normal;
}

.flex-container {
    max-width: 120rem;
    margin: 0 auto;

    display: flex;
    flex-direction: row;

    padding: 1em 1em;

    overflow: hidden;
}

.panel {
    height: 100%;
    height: -moz-available;
    height: -webkit-fill-available;
    height: stretch;

    border-radius: 15px;

    background: var(--panel-bg-color);

    padding: 2em 2em;
    margin: 1em 1em;
}

#form-input {
    flex: 1;

    height: 85vh;
}

#scratch-pad {
    flex: 3;

    display: flex;
    flex-flow: wrap;

    height: 85vh;
    overflow: scroll;
}

.form-row {
    display: inline-block;

    width: 100%;
    width: -moz-available;
    width: -webkit-fill-available;
    width: stretch;

    margin: 1em 0;
}

#session-select {
    padding: 1em;

    width: 100%;
    width: -moz-available;
    width: -webkit-fill-available;
    width: stretch;
}

/* TODO: Create custom select */
#code-select,
#code-select * {
    height: 4em;
    padding: 1em;
}

#name-field {
    padding: 1em;
}

/* Barcode Style */
.barcode {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: fit-content;
    height: fit-content;
    border: 2px solid var(--barcode-border-color);
    border-radius: 15px;
    padding: 1em;
    margin: 1em;
    background: var(--bc-bg-color);
}

.barcode #top-bar {
    width: 100%;
    width: -moz-available;
    width: -webkit-fill-available;
    width: stretch;
}

.barcode #top-bar {
    display: flex;
    flex-direction: row;
}

.barcode #top-bar button {
    background: var(--bc-button-bg-color);
    flex: 1;
}

.barcode #top-bar p {
    text-align: center;
    flex: 4;
}

.barcode img {
    padding: 0.5em 0;
}

.barcode p {
    color: var(--bc-fg-color);
    margin: 0;
    height: 40px;
    line-height: 40px
}

